tests/files/flow_controller_tests/should_run/025.cmdr
//Test modulo with mixed ints/floats
x = 8 % 3.2;
println x;
y = 2;
println y;
z = 4.2 % y;
println z;
x %= 2;
println x;
y %= 1.3;
println y;