tests/files/flow_controller_tests/should_fail/013.cmdr
//Should fail due to modulo by 0 with a variable holding 0
x = 3;
y = 0;
z = x % y;